[package]
name = "ALPack"
version = "4.0.0"
edition = "2024"

[dependencies]
pico-args = { version = "0.5" }
ureq = { version = "3.2", features = ["charset"] }
scraper = { version = "0.25" }
regex = { version = "1.12" }
indicatif = { version = "0.18" }
flate2 = { version = "1.1" }
tar = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
toml = {  version = "0.9" }
walkdir_minimal = { version = "1.0" }
which = { version = "8.0" }

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
