[package]
name = "ALPack"
version = "5.0.0"
edition = "2024"

[dependencies]
sandbox_utils = { git = "https://github.com/LinuxProativo/sandbox_utils", default-features = false, features = ["gz"] }
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "3.3", features = ["charset"] }
obliterate = "1.1"
recursive_copy = "1.3"
pico-args = "0.5"
scraper = "0.26"
regex = "1.12"
toml = "1.1"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
